--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -21,15 +21,20 @@
                 </div>
                 <div class="dashboard-frame">
                     <h4>Course by Department</h4>
-                    <div style="float: left; margin-left: 5%;">
-                        {% for dept in courses_by_department[:(courses_by_department|length // 2 + courses_by_department|length % 2)] %}
-                            <label>{{ dept.department }}: {{ dept.count }}</label>
-                        {% endfor %}
+                    <div style="float: left; width: 45%; margin-left: 5%;">
+                        <ul>
+                            {% for dept in courses_by_department[:(courses_by_department|length // 2 + courses_by_department|length % 2)] %}
+                                <li><label>{{ dept.department }}: {{ dept.count }}</label></li>
+                            {% endfor %}
+                        </ul>
                     </div>
-                    <div style="float: right; margin-right: 5%;">
-                        {% for dept in courses_by_department[(courses_by_department|length // 2 + courses_by_department|length % 2):] %}
-                            <label>{{ dept.department }}: {{ dept.count }}</label>
-                        {% endfor %}
+
+                    <div style="float: right; width: 45%; margin-right: 5%;">
+                        <ul>
+                            {% for dept in courses_by_department[(courses_by_department|length // 2 + courses_by_department|length % 2):] %}
+                                <li>{{ dept.department }}: {{ dept.count }}</li>
+                            {% endfor %}
+                        </ul>
                     </div>
                 </div>  
                 <div class="dashboard-frame">
