--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -34,19 +34,15 @@
                 <div class="dashboard-frame">
                     <h4>Course by Department</h4>
                     <div style="float: left;">
-                        <ul>
-                            {% for dept in courses_by_department[:(courses_by_department|length // 2 + courses_by_department|length % 2)] %}
-                                <li>{{ dept.department }}: {{ dept.count }}</li>
-                            {% endfor %}
-                        </ul>
+                        {% for dept in courses_by_department[:(courses_by_department|length // 2 + courses_by_department|length % 2)] %}
+                            <li>{{ dept.department }}: {{ dept.count }}</li>
+                        {% endfor %}
                     </div>
 
                     <div style="float: right;">
-                        <ul>
-                            {% for dept in courses_by_department[(courses_by_department|length // 2 + courses_by_department|length % 2):] %}
-                                <li>{{ dept.department }}: {{ dept.count }}</li>
-                            {% endfor %}
-                        </ul>
+                        {% for dept in courses_by_department[(courses_by_department|length // 2 + courses_by_department|length % 2):] %}
+                            {{ dept.department }}: {{ dept.count }}
+                        {% endfor %}
                     </div>
                 </div>  
             </div>
