--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -27,7 +27,7 @@
                     <p class="dashboard-text" style="color:red;">{{ total_exam - exam_with_complete - error_rows }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Error Rows</h3>
+                    <h3>Haven't Assigned</h3>
                     <p class="dashboard-text" style="color:red;">{{ error_rows }}</p>
                 </div>
             </div>
