--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -22,7 +22,7 @@
                 <div class="dashboard-frame">
                     <h3>Venues by Floor</h3>
                     {% for floor, count in venues_by_floor %}
-                        {{ floor }}: {{ count }}<br>
+                        {{ floor }}: {{ count }} Venue(s)<br>
                     {% endfor %}
                 </div>
                 <div class="dashboard-frame">
