--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -134,5 +134,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
+
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html>
